plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'shinzo'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
//	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	//잭슨 라이브러리
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	//mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	//통신을 위한 웹 클라이언트
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'io.netty:netty-all:4.1.109.Final'
	//컬렉션을 서브 리스트로 나눔(분할저장을 간단하게 처리하기 위해서)
	implementation("com.google.guava:guava:33.1.0-jre")

//	testImplementation 'org.springframework.security:spring-security-test'

	//잭슨 라이브러리
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	//통신을 위한 웹 클라이언트
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'io.netty:netty-all:4.1.109.Final'

	//컬렉션을 서브 리스트로 나눔(분할저장을 간단하게 처리하기 위해서)
	implementation("com.google.guava:guava:33.1.0-jre")


	implementation files('libs/kobis-opcl-rest-v1.0.jar')
	implementation 'com.googlecode.json-simple:json-simple:1.1.1'

//	testImplementation 'org.springframework.security:spring-security-test'

	//잭슨 라이브러리
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	//통신을 위한 웹 클라이언트
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'io.netty:netty-all:4.1.109.Final'

	//컬렉션을 서브 리스트로 나눔(분할저장을 간단하게 처리하기 위해서)
	implementation("com.google.guava:guava:33.1.0-jre")


	implementation files('libs/kobis-opcl-rest-v1.0.jar')
	implementation 'com.googlecode.json-simple:json-simple:1.1.1'

}

tasks.named('test') {
	useJUnitPlatform()
}
